2 | PA | IS v IS | Planetary Assault IS vs IS | 22,24,29
From this number one is to choose to enter as entry point for a starting invasion lobby.

#########################################################

Version 5.7.15 (19.11.2021)
- ADDED: PHP script to reset attacks
- ADDED: PHP script to reset season
- FIXED: Bug while saving chars in lobby
- CHANGED: Shortened lines in log output

Version 5.7.14 (15.11.2021)
- CHANGED: Fields in C3._HH_ATTACK_CHARACTER made Nullable (to fix object saving)
- REMOVED: Update check for DEV runs (local debug)

Version 5.7.13 (14.11.2021)
- FIXED: Storing character for an attack bugfix
- FIXED: Version check does not ask to install an older (online) version

Version 5.7.12 (13.11.2021)
- Fixes for the lobby

Version 5.7.10 (10.11.2021)
- CHANGED: Changed donation link to liberapay.com

Version 5.7.9 (09.11.2021)
- FIXED: Invasion lobby
- CHANGED: (Try) Thread execution of user info (to fix the NullPointer that sometimes fires after login)

Version 5.7.8 (07.11.2021)
- FIXED: Colors in ListViews
- FIXED: Offline Users are marked in yellow
- FIXED: IRC indicator circle moved to fit the right button

Version 5.7.7 (06.11.2021)
- UPDATRED: ASM -> 9.2
- ADDED: Patreon button to login screen
- CHANGED: Version numbers added to the parent pom.xml

Version 5.7.4 (03.11.2021)
- ADDED: Changelog upload
- ADDED: Template for new panes
- CHANGED: Re-arranged log- and chat button to make space for the dice button
- CHANGED: Icon for personal roleplay
- STARTED: Dice pane

Version 5.7.3 (01.11.2021)
- UPDATED: Spring libraries --> 5.3.11
- CHANGED: Deactivated auto login checkbox
- CHANGED: Deactivated guest account checkbox
- PREPARED: Executable to add signature added to workspace (offline)

Version 5.7.1 (28.10.2021)
- UPDATED: JavaFX --> 17.0.0.1
- UPDATED: Netty --> 4.1.60.FINAL
- PREPARED: Code signing needed for *Setup.exe, order initiated

Version 5.6.7 (26.10.2021)
- ADDED: Download for client installer
- ADDED: Messages enumeration