@@ -14,4 +14,4 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 
 # Separate appender for log4j so that not stdout needs to be redirected
 # log4j.rootLogger=INFO, stdout
-# log4j.appender.stdout=net.clanwolf.starmap.logging.C3AppenderLog4j
+# log4j.appender.stdout=net.clanwolf.starmap.server.util.C3AppenderLog4j
