@@ -1,20 +1,0 @@
-//package net.clanwolf.starmap.logging;
-//
-//import org.apache.log4j.AppenderSkeleton;
-//import org.apache.log4j.spi.LoggingEvent;
-//
-//public class SocotoAppenderLog4j extends AppenderSkeleton {
-//
-//	@Override
-//	protected void append(LoggingEvent event) {
-//		C3Logger.info(event.getRenderedMessage());
-//	}
-//
-//	public void close() {
-//
-//	}
-//
-//	public boolean requiresLayout() {
-//		return false;
-//	}
-//}
