@@ -225,6 +225,16 @@
 			<artifactId>jackson-jsog</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+		<!--		<dependency>-->
+		<!--			<groupId>org.apache.logging.log4j</groupId>-->
+		<!--			<artifactId>log4j-core</artifactId>-->
+		<!--			<version>2.14.1</version>-->
+		<!--		</dependency>-->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.32</version>
+		</dependency>
 	</dependencies>
 
 	<build>
