@@ -1,0 +1,7 @@
+# Separate appender for log4j so that not stdout needs to be redirected
+log4j.rootLogger=INFO, stdout
+log4j.appender.stdout=net.clanwolf.starmap.server.util.C3AppenderLog4j
+
+log4j.logger.org.hibernate=info
+log4j.logger.org.hibernate.SQL=debug
+log4j.logger.org.hibernate.type.descriptor.sql=trace
