@@ -25,6 +25,7 @@ Version 5.7.15 (19.11.2021)
 - ADDED: PHP script to reset season
 - FIXED: Bug while saving chars in lobby
 - CHANGED: Shortened lines in log output
+- CHANGED: Server now logs with log4j (can be configured)
 
 Version 5.7.14 (15.11.2021)
 - CHANGED: Fields in C3._HH_ATTACK_CHARACTER made Nullable (to fix object saving)
